@@ -1,5 +1,8 @@
 2010-09-05  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
+	* gnus-start.el (gnus-get-unread-articles): Don't bother with groups
+	that aren't going to be activated.
+
 	* gnus-html.el (gnus-article-html): Allow calling without specifying
 	the handle.  In that case, dissect the buffer first.
 
